[gd_scene load_steps=15 format=3 uid="uid://b6po72onskoa6"]

[ext_resource type="ArrayMesh" uid="uid://b4saymm0uqay4" path="res://islands/inside_hub/cart_packages.obj" id="1_u6tsc"]
[ext_resource type="Shader" path="res://shaders/paper_material.gdshader" id="2_0jrja"]
[ext_resource type="Texture2D" uid="uid://bkbgyrqdfaeer" path="res://shaders/res/paper_0026_color_4k.jpg" id="3_knvxg"]
[ext_resource type="Texture2D" uid="uid://dmtowuxps167p" path="res://shaders/res/paper_0026_normal_opengl_4k.png" id="4_7pwnv"]
[ext_resource type="Texture2D" uid="uid://bag7nnesrme58" path="res://shaders/res/paper_0026_roughness_4k.jpg" id="5_d7x2s"]
[ext_resource type="Script" path="res://islands/inside_hub/cart_script.gd" id="6_kppv6"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_bgff7"]
render_priority = 0
shader = ExtResource("2_0jrja")
shader_parameter/paper_color = Color(0.560784, 0.341176, 0.239216, 1)
shader_parameter/paper_color_both_sides = null
shader_parameter/point_size = 1.0
shader_parameter/roughness = 1.0
shader_parameter/metallic_texture_channel = null
shader_parameter/specular = 0.05
shader_parameter/normal_scale = 0.6
shader_parameter/uv1_scale = Vector3(5, 5, 5)
shader_parameter/uv1_offset = Vector3(0, 0, 0)
shader_parameter/uv2_scale = Vector3(1, 1, 1)
shader_parameter/uv2_offset = Vector3(0, 0, 0)
shader_parameter/texture_albedo = ExtResource("3_knvxg")
shader_parameter/texture_roughness = ExtResource("5_d7x2s")
shader_parameter/texture_normal = ExtResource("4_7pwnv")

[sub_resource type="Gradient" id="Gradient_s8vjo"]
interpolation_mode = 1
offsets = PackedFloat32Array(0, 0.748201)
colors = PackedColorArray(0.718623, 0.608856, 0.488886, 1, 0.577346, 0.469838, 0.388794, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_7njeb"]
gradient = SubResource("Gradient_s8vjo")
width = 256
height = 256
fill = 2
fill_to = Vector2(0.063, 0.063)
repeat = 1

[sub_resource type="ShaderMaterial" id="ShaderMaterial_lqo7u"]
render_priority = 0
shader = ExtResource("2_0jrja")
shader_parameter/paper_color = Color(1, 1, 1, 1)
shader_parameter/paper_color_both_sides = null
shader_parameter/point_size = 1.0
shader_parameter/roughness = 1.0
shader_parameter/metallic_texture_channel = null
shader_parameter/specular = 0.05
shader_parameter/normal_scale = 0.6
shader_parameter/uv1_scale = Vector3(5, 5, 5)
shader_parameter/uv1_offset = Vector3(0, 0, 0)
shader_parameter/uv2_scale = Vector3(1, 1, 1)
shader_parameter/uv2_offset = Vector3(0, 0, 0)
shader_parameter/texture_albedo = ExtResource("3_knvxg")
shader_parameter/texture_paper = SubResource("GradientTexture2D_7njeb")
shader_parameter/texture_roughness = ExtResource("5_d7x2s")
shader_parameter/texture_normal = ExtResource("4_7pwnv")

[sub_resource type="BoxShape3D" id="BoxShape3D_buwul"]
size = Vector3(0.376449, 0.0677619, 0.500033)

[sub_resource type="BoxShape3D" id="BoxShape3D_rdvlb"]
size = Vector3(0.376449, 0.182888, 0.0204485)

[sub_resource type="BoxShape3D" id="BoxShape3D_0a8wo"]
size = Vector3(0.500201, 0.18802, 0.0204485)

[sub_resource type="BoxShape3D" id="BoxShape3D_k1k1p"]
size = Vector3(0.147127, 0.0625748, 0.116857)

[node name="CharacterBody3D" type="CharacterBody3D"]
collision_layer = 10
collision_mask = 8
script = ExtResource("6_kppv6")
type = 2

[node name="CartPackages" type="MeshInstance3D" parent="."]
mesh = ExtResource("1_u6tsc")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("ShaderMaterial_bgff7")
surface_material_override/1 = SubResource("ShaderMaterial_lqo7u")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.049547, 0.0360607, 0)
shape = SubResource("BoxShape3D_buwul")

[node name="CollisionShape3D3" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.049547, 0.160608, 0.240458)
shape = SubResource("BoxShape3D_rdvlb")

[node name="CollisionShape3D4" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.049547, 0.160608, -0.239955)
shape = SubResource("BoxShape3D_rdvlb")

[node name="CollisionShape3D5" type="CollisionShape3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -0.131714, 0.158284, -0.000423312)
shape = SubResource("BoxShape3D_0a8wo")

[node name="CollisionShape3D6" type="CollisionShape3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.229559, 0.158284, -0.000423312)
shape = SubResource("BoxShape3D_0a8wo")

[node name="CollisionShape3D8" type="CollisionShape3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.0462491, 0.128541, -0.000423312)
shape = SubResource("BoxShape3D_0a8wo")

[node name="CollisionShape3D9" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.049547, 0.130864, -0.0866119)
shape = SubResource("BoxShape3D_rdvlb")

[node name="CollisionShape3D11" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.049547, 0.130864, 0.0786521)
shape = SubResource("BoxShape3D_rdvlb")

[node name="Areas" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0487946, 0.382755, -0.0861754)
monitoring = false
monitorable = false

[node name="Packages1" type="CollisionShape3D" parent="Areas"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0898033, -0.183943, -0.0778113)
shape = SubResource("BoxShape3D_k1k1p")

[node name="Packages2" type="CollisionShape3D" parent="Areas"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0929215, -0.183943, -0.0778113)
shape = SubResource("BoxShape3D_k1k1p")

[node name="Packages3" type="CollisionShape3D" parent="Areas"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0898033, -0.183943, 0.0816364)
shape = SubResource("BoxShape3D_k1k1p")

[node name="Packages4" type="CollisionShape3D" parent="Areas"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0929215, -0.183943, 0.0816364)
shape = SubResource("BoxShape3D_k1k1p")

[node name="Packages5" type="CollisionShape3D" parent="Areas"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0898033, -0.183943, 0.244576)
shape = SubResource("BoxShape3D_k1k1p")

[node name="Packages6" type="CollisionShape3D" parent="Areas"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0929215, -0.183943, 0.244576)
shape = SubResource("BoxShape3D_k1k1p")

[node name="NavigationObstacle3D" type="NavigationObstacle3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.056, 0.1, 0)
radius = 0.29
height = 0.5

[node name="Handle" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0447786, 0, -0.46885)
